Update title and heading from "NSL Links" to "My Links"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NSL Links</title>
+    <title>My Links</title>
     <style>
         * {
             margin: 0;
@@ -146,7 +146,7 @@
     </style>
 </head>
 <body>
-    <h1>NSL Links</h1>
+    <h1>My Links</h1>
 
     <div id="controls">
         <button id="refresh-btn" onclick="loadStatus()">Refresh Now</button>
